--- a/task-2/style.css
+++ b/task-2/style.css
@@ -64,10 +64,12 @@ button {
   background: rgba(74, 79, 86, 1);
 }
 
+
 .container-list {
+  width: 100%;
+  max-width: 534px;
   margin: 0 auto;
   padding-top: 20px;
-  width: 534px;
 }
 
 li:nth-child(odd) {
@@ -99,6 +101,11 @@ input {
 
 .list-content {
   padding: 14px;
+}
+
+span::after {
+  display: inline-block;
+  text-decoration: inherit;
 }
 
 .span-pickles::after {
@@ -141,13 +148,9 @@ li:active {
   background: rgba(255, 137, 132, 1);
 }
 
-input:checked + .span {
+input:checked + span {
   text-decoration: line-through;
   color: rgba(155, 150, 172, 1);
 }
 
-input:checked + .span::after {
-  text-decoration: line-through;
-  color: rgba(155, 150, 172, 1);
-}
 
