--- a/task-1/style.css
+++ b/task-1/style.css
@@ -191,10 +191,12 @@ button {
     border-radius: 22px;
     padding: 10px 16px;
     margin-bottom: 30px;
+    cursor: pointer;
 }
 
 button:hover {
     background: #696969;
+    border: 2px solid #696969;
 }
 
 .p-last-m {
