--- a/task-2/style.css
+++ b/task-2/style.css
@@ -45,10 +45,6 @@ button {
   font-size: 18px;
 }
 
-li {
-  color: rgba(255, 255, 255, 1);
-}
-
 body {
   background: rgba(59, 63, 69, 1);
 }
@@ -64,12 +60,23 @@ button {
   background: rgba(74, 79, 86, 1);
 }
 
-
 .container-list {
   width: 100%;
   max-width: 534px;
   margin: 0 auto;
   padding-top: 20px;
+}
+
+ul {
+  padding-bottom: 45px;
+}
+
+li {
+  color: rgba(255, 255, 255, 1);
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+
+  list-style: none;
 }
 
 li:nth-child(odd) {
@@ -80,27 +87,20 @@ li:nth-child(even) {
   background: rgba(122, 117, 147, 1);
 }
 
-li {
-  list-style: none;
-}
-
-ul {
-  padding-bottom: 45px;
-}
-
-button {
-  border: none;
-  width: 534px;
-  padding: 12px;
-}
-
 input {
   height: 19px;
   width: 19px;
 }
 
-.list-content {
+label {
   padding: 14px;
+
+  display: block;
+  cursor: pointer;
+}
+
+span {
+  padding-left: 16px;
 }
 
 span::after {
@@ -133,9 +133,11 @@ span::after {
   font-size: 11px;
 }
 
-label {
-  display: block;
+button {
   cursor: pointer;
+  border: none;
+  width: 534px;
+  padding: 12px;
 }
 
 li:hover {
@@ -153,4 +155,6 @@ input:checked + span {
   color: rgba(155, 150, 172, 1);
 }
 
-
+li:has(input[type="checkbox"]:checked) label{
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
